<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComandoActivity">

    <RelativeLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"

            android:text="Escolha um Comando "
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2">

            <RadioGroup
                android:id="@+id/radioGroupComando"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="0dp">

                <RadioButton
                    android:id="@+id/radio_enviar_dietas_comando"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/comando1_alimentador" />

                <RadioButton
                    android:id="@+id/radio_limparAgendamentos_comando"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/comando3_alimentador" />

                <RadioButton
                    android:id="@+id/radio_ativa_envio_de_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/comando4_alimentador" />

                <RadioButton
                    android:id="@+id/radio_desativa_envio_de_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/comando5_alimentador" />

                <RadioButton
                    android:id="@+id/radio_despejar_racao_comando"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/comando2_alimentador" />


            </RadioGroup>

            <EditText
                android:id="@+id/quantidadegramas_comando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/radioGroupComando"
                android:layout_marginLeft="150dp"
                android:hint="Gramas"
                android:textColorHint="#787676"
                android:visibility="invisible" />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_enviar_comando_alimentador_comando"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Enviar Comando"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>